--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "explore": "gridsome explore"
   },
   "dependencies": {
-    "gridsome": "^0.7.0"
+    "gridsome": "^0.7.0",
+    "tailwindcss-interaction-variants": "^5.0.0"
   },
   "overrides": {
     "gridsome": {
