--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "gridsome": "^0.7.0",
-    "tailwindcss-interaction-variants": "^5.0.0"
+    "tailwindcss-interaction-variants": "^5.0.0",
+    "vue-tippy": "^4.16.1"
   },
   "overrides": {
     "gridsome": {
