--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "scripts": {
     "build": "gridsome build",
     "develop": "gridsome develop",
-    "explore": "gridsome explore"
+    "explore": "gridsome explore",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "gh-pages": "^6.1.0",
     "gridsome": "^0.7.0",
     "tailwindcss-interaction-variants": "^5.0.0",
     "vue-tippy": "^4.16.1"
