--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "gh-pages": "^6.1.0",
     "gridsome": "^0.7.0",
+    "jwt-decode": "^4.0.0",
     "tailwindcss-interaction-variants": "^5.0.0",
     "vue-tippy": "^4.16.1"
   },
