--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.1",
     "gh-pages": "^6.1.0",
     "gridsome": "^0.7.0",
     "jwt-decode": "^4.0.0",
