--- a/package.json
+++ b/package.json
@@ -1,34 +1,30 @@
 {
-  "name": "remnant",
+  "name": "my-vue-app",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "build": "gridsome build",
-    "develop": "gridsome develop",
-    "explore": "gridsome explore",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.1",
-    "gh-pages": "^6.1.0",
-    "gridsome": "^0.7.0",
     "jwt-decode": "^4.0.0",
-    "tailwindcss-interaction-variants": "^5.0.0",
-    "vue-tippy": "^4.16.1"
-  },
-  "overrides": {
-    "gridsome": {
-      "sharp": "0.29.3"
-    }
+    "tippy.js": "^6.3.7",
+    "unplugin-icons": "^0.18.3",
+    "unplugin-vue-components": "^0.26.0",
+    "vue": "^3.3.11",
+    "vue-progressive-image": "4.0.0-beta.10",
+    "vue-router": "4",
+    "vue-tippy": "^6.4.1"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.5.1",
-    "@fortawesome/free-brands-svg-icons": "^6.5.1",
-    "@fortawesome/free-solid-svg-icons": "^6.5.1",
-    "@fortawesome/vue-fontawesome": "^2.0.0",
-    "@tailwindcss/postcss7-compat": "^2.2.17",
-    "autoprefixer": "^9.8.8",
-    "postcss": "^7.0.39",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
+    "@iconify-json/mdi": "^1.1.64",
+    "@vitejs/plugin-vue": "^4.5.2",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1",
+    "vite": "^5.0.8"
   }
 }
