feat: add alert popup

--- a/package.json
+++ b/package.json
@@ -10,7 +10,15 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.1",
+    "@types/node": "^20.11.16",
+    "@vue/compiler-sfc": "^3.3.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "jwt-decode": "^4.0.0",
+    "lucide-vue-next": "^0.321.0",
+    "radix-vue": "^1.4.0",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "tippy.js": "^6.3.7",
     "unplugin-icons": "^0.18.3",
     "unplugin-vue-components": "^0.26.0",
